log
Thu Apr  7 15:30:47 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
054dec3
Sat, 09 Apr 2022 19:34:50: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf4ed0c
